// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test DateTimeButton render DateTimeButton formatType = "date" 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderColor": "#D9D9D9",
      "borderRadius": 2,
      "borderWidth": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "marginHorizontal": 8,
      "opacity": 1,
      "paddingLeft": 12,
      "paddingRight": 8,
      "paddingVertical": 8,
      "width": 124,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#595959",
          "fontFamily": "SFProDisplay-Regular",
          "fontSize": 12,
          "lineHeight": 20,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "marginRight": 4,
        },
      ]
    }
  >
    20.01.21
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#595959",
          "fontFamily": "antfill",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        undefined,
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Test DateTimeButton render DateTimeButton formatType is undefined 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderColor": "#D9D9D9",
      "borderRadius": 2,
      "borderWidth": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "marginHorizontal": 8,
      "opacity": 1,
      "paddingLeft": 12,
      "paddingRight": 8,
      "paddingVertical": 8,
      "width": 124,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#595959",
          "fontFamily": "SFProDisplay-Regular",
          "fontSize": 12,
          "lineHeight": 20,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "marginRight": 4,
        },
      ]
    }
  >
    20.01.21 05:00
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#595959",
          "fontFamily": "antfill",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        undefined,
      ]
    }
  >
    
  </Text>
</View>
`;
